--- a/src/template.html
+++ b/src/template.html
@@ -3,12 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>placeholder</title>
+    <title>ToDo App</title>
   </head>
 
 
   <body>
 
+   
+    <form class= "main-form">
+      <div class="input-box">
+        <div class="input">
+        cv
+      </div>
+      </div>
+      </form>
+     
+  
   </body>
   
 
