--- a/src/template.html
+++ b/src/template.html
@@ -6,20 +6,23 @@
     <title>ToDo App</title>
   </head>
 
-
   <body>
+    <div id="header">
+      <h1>Let's Get Started</h1>
+    </div>
 
-   
-    <form class= "main-form">
-      <div class="input-box">
-        <div class="input">
-        cv
-      </div>
-      </div>
+    <div id="form">
+      <form>
+        <input class="todo-input" type="text" placeholder="Write a new task..."
+        />
+
+        <button class="todo-btn" type="submit">ADD</button>
       </form>
-     
-  
-  </body>
-  
+    </div>
+    <div id="myUnOrdList">
+      <ul class="todo-list">
 
+	  </ul>
+    </div>
+  </body>
 </html>
