added basic eventlstnrs

--- a/src/template.html
+++ b/src/template.html
@@ -13,16 +13,12 @@
 
     <div id="form">
       <form>
-        <input class="todo-input" type="text" placeholder="Write a new task..."
-        />
-
+        <input class="todo-input" type="text" placeholder="Write a new task..."/>
         <button class="todo-btn" type="submit">ADD</button>
       </form>
     </div>
     <div id="myUnOrdList">
-      <ul class="todo-list">
-
-	  </ul>
+      <ul class="todo-list"></ul>
     </div>
   </body>
 </html>
