--- a/src/template.html
+++ b/src/template.html
@@ -14,7 +14,7 @@
     <div id="form">
       <form>
         <input class="todo-input" type="text" placeholder="Write a new task..."/>
-        <button class="todo-btn" type="submit">ADD</button>
+        <button class="todo-button" type="submit">ADD</button>
       </form>
     </div>
     <div id="myUnOrdList">
