changed layout, added task list

--- a/src/template.html
+++ b/src/template.html
@@ -6,19 +6,35 @@
     <title>ToDo App</title>
   </head>
 
-  <body>
-    <div id="header">
-      <h1>Let's Get Started</h1>
-    </div>
+  <body>  
 
-    <div id="form">
+
+    <!-- header -->
+
+    <header>
+       <h1>// To-do List</h1>
+    </header>
+
+
+    <!-- form -->
+
       <form>
         <input class="todo-input" type="text" placeholder="Write a new task..."/>
-        <button class="todo-button" type="submit">ADD</button>
+        <button class="todo-button" type="submit">+</button>
       </form>
-    </div>
-    <div id="myUnOrdList">
-      <ul class="todo-list"></ul>
-    </div>
+ 
+
+
+    <!-- task list -->
+
+<div class='task-container'>
+    <ul class='task-list'>
+        <li>Get Milk</li>
+    </ul>
+</div>
+
+
+
+
   </body>
 </html>
