added js functionality, app is ready

--- a/src/template.html
+++ b/src/template.html
@@ -12,15 +12,17 @@
     <!-- header -->
 
     <header>
-       <h1>// To-do List</h1>
+       <h1>To-do List</h1>
     </header>
 
 
     <!-- form -->
 
       <form>
-        <input class="todo-input" type="text" placeholder="Write a new task..."/>
-        <button class="todo-button" type="submit">+</button>
+          
+        <input class="task-input" type="text" placeholder="Write a new task..."/>
+        <button class="task-button" type="submit"><i class="gg-math-plus"></i>
+        </button>
       </form>
  
 
@@ -29,12 +31,8 @@
 
 <div class='task-container'>
     <ul class='task-list'>
-        <li>Get Milk</li>
     </ul>
 </div>
-
-
-
 
   </body>
 </html>
